<resources>
    <!-- App Info strings -->
    <!-- start with app -->
    <string name="app_name">Leap Drone 1.0</string>

    <!-- DJI Drone strings -->
    <!-- start with d -->
    <string name="action_settings">Settings</string>
    <string name="d_connected">Connected</string>
    <string name="d_disconnected">Disconnected</string>
    <string name="d_product_information">Product Information</string>
    <string name="d_connection_no_product">Status: No Product Connected</string>
    <string name="d_sdk_version">DJI SDK Version: %1$s</string>
    <string name="d_model_not_available">Model Not Available</string>
    <string name="d_success">Success</string>
    <string name="d_openbtn_default">Connect to a drone..</string>
    <string name="d_openbtn_ready_to_fly">Ready to fly..</string>
    <string name="d_takeoff_str">takeoff</string>
    <string name="d_land_str">land</string>

    <!-- Bluetooth Low Energy strings -->
    <!-- start with ble -->
    <string name="ble_str">BLE</string>
    <string name="ble_test">BLE test</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="ble_label_data">Command:</string>
    <string name="ble_label_device_address">Device address:</string>
    <string name="ble_label_state">State:</string>
    <string name="ble_no_data">No data</string>
    <string name="ble_connected">Connected</string>
    <string name="ble_disconnected">Disconnected</string>
    <string name="ble_title_devices">BLE Device Scan</string>
    <string name="ble_error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ble_unknown_device">Unknown device</string>
    <string name="ble_unknown_characteristic">Unknown characteristic</string>
    <string name="ble_unknown_service">Unknown service</string>
</resources>
