<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_product_info"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:gravity="center"
        android:text="@string/d_connection_no_product"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:text="@string/d_product_information"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text_model_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text="@string/d_model_not_available"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/btn_open"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:background="@drawable/round_btn"
        android:text="@string/d_openbtn_default"
        android:textColor="@color/white"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:textSize="15sp"/>
</RelativeLayout>