<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="horizontal">
    <dji.ux.widget.FPVWidget
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <dji.ux.widget.FPVOverlayWidget
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <dji.ux.workflow.CompassCalibratingWorkFlow
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/signal"
        android:layout_width="match_parent"
        android:layout_toStartOf="@+id/CameraCapturePanel"
        android:layout_height="25dp"
        android:background="@color/dark_gray"
        android:orientation="horizontal">
        <dji.ux.widget.PreFlightStatusWidget
            android:layout_width="238dp"
            android:layout_height="25dp"/>
        <dji.ux.widget.FlightModeWidget
            android:layout_width="103dp"
            android:layout_height="22dp"/>
        <dji.ux.widget.GPSSignalWidget
            android:layout_width="44dp"
            android:layout_height="22dp"/>
        <dji.ux.widget.VisionWidget
            android:layout_width="22dp"
            android:layout_height="22dp"/>
        <dji.ux.widget.RemoteControlSignalWidget
            android:layout_width="38dp"
            android:layout_height="22dp"/>
        <dji.ux.widget.VideoSignalWidget
            android:layout_width="38dp"
            android:layout_height="22dp"/>
        <dji.ux.widget.WiFiSignalWidget
            android:layout_width="22dp"
            android:layout_height="20dp"/>
        <dji.ux.widget.BatteryWidget
            android:layout_width="96dp"
            android:layout_height="22dp"
            custom:excludeView="singleVoltage"/>
        <dji.ux.widget.ConnectionWidget
            android:layout_marginTop="3dp"
            android:layout_width="18dp"
            android:layout_height="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signal"
        android:layout_toStartOf="@id/CameraCapturePanel"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="18dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_str"
                android:textSize="18sp"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="22dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_label_device_address"
                android:textSize="12sp"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_label_state"
                android:textSize="12sp"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/connection_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_disconnected"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_label_data"
                android:textSize="12sp"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/data_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_no_data"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/joystick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dashboard"
        android:layout_toStartOf="@+id/CameraCapturePanel"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal">
        <com.dji.sdk.leapdrone.ui.joystick.OnScreenJoystick
            android:id="@+id/directionJoystickLeft"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@mipmap/joystick_bg"/>
        <com.dji.sdk.leapdrone.ui.joystick.OnScreenJoystick
            android:id="@+id/directionJoystickRight"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="300dp"
            android:background="@mipmap/joystick_bg"/>
    </LinearLayout>

    <dji.ux.widget.controls.CameraControlsWidget
        android:id="@+id/CameraCapturePanel"
        android:layout_width="50dp"
        android:layout_height="213dp"
        android:layout_alignParentRight="true"
        android:background="@color/black_transparent"
        tools:ignore="RtlHardcoded"/>

    <LinearLayout
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="12dp"
        android:orientation="horizontal">
        <dji.ux.widget.dashboard.DashboardWidget
            android:id="@+id/Compass"
            android:layout_width="405dp"
            android:layout_height="91dp"
            android:layout_marginRight="12dp"
            tools:ignore="RtlHardcoded"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">
            <Button
                style="@style/common_button"
                android:id="@+id/btn_take_off"
                android:layout_height="20dp"
                android:text="@string/d_takeoff_str"/>
            <Button
                style="@style/common_button"
                android:id="@+id/btn_land"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/d_land_str" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>